--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.1.20-4) unstable; urgency=low
+
+  * Add sysfs to PRUNFS (Closes: #219340)
+
+ -- Andreas Metzler <ametzler@debian.org>  Wed,  5 Nov 2003 21:32:39 +0100
+
 findutils (4.1.20-3) unstable; urgency=low
 
   * Don't ship /usr/share/info/dir.gz, change Makefile.in to use install-info
