--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.3.20041106-UNRELEASED) unstable; urgency=low
+
+  * New upstream version (pre-4.2.4, CVS 2004-11-06).
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat,  6 Nov 2004 20:53:17 +0100
+
 findutils (4.1.20-4) unstable; urgency=low
 
   * Add sysfs to PRUNFS (Closes: #219340)
