--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ findutils (4.2.3.20041106-UNRELEASED) unstable; urgency=low
     - documents type of supported regular expressions for -regex
       (Closes: #162838)
     - Closes: #256367: Deprecated usage of trap in locate/updatedb.sh
+  * Add shfs to PRUNFS (Closes: #260780)
 
  -- Andreas Metzler <ametzler@debian.org>  Sat,  6 Nov 2004 20:53:17 +0100
 
