--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,7 @@ findutils (4.2.3.20041106-UNRELEASED) unstable; urgency=low
     pass global options to find.
   * Set FINDOPTIONS='-ignore_readdir_race' for updatedb.sh's cron-job and stop
     redirecting stderr to /dev/null.  (Closes: #245874, #169730)
+  * standards-version 3.6.1 (no changes required).
 
  -- Andreas Metzler <ametzler@debian.org>  Sat,  6 Nov 2004 20:53:17 +0100
 
