--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-findutils (4.2.3.20041106-UNRELEASED) unstable; urgency=low
+findutils (4.2.3.CVS20041106-1) experimental; urgency=low
 
   * New upstream version (pre-4.2.4, CVS 2004-11-06).
     - Closes: #176201: findutils: xargs enviroment size limited to 20k
@@ -26,7 +26,7 @@ findutils (4.2.3.20041106-UNRELEASED) unstable; urgency=low
       instead of splitting on any blank characters as without -i. - Other
       implementations behave the same and the -I XSI extension documented in
       SUSv3/POSIX works like this, too.
-    
+
    * Removed unnecessary patches: 10_missing_includes 20_missing_newlines
      30_locate_nologinsh 35_updatedb-location 36_savannah-8623 40_direntry
      50_install_info
@@ -37,7 +37,7 @@ findutils (4.2.3.20041106-UNRELEASED) unstable; urgency=low
     redirecting stderr to /dev/null.  (Closes: #245874, #169730)
   * standards-version 3.6.1 (no changes required).
 
- -- Andreas Metzler <ametzler@debian.org>  Sat,  6 Nov 2004 20:53:17 +0100
+ -- Andreas Metzler <ametzler@debian.org>  Sun,  7 Nov 2004 13:11:28 +0100
 
 findutils (4.1.20-4) unstable; urgency=low
 
