darn, -ignore_readdir_race is not enough for fixing #245874
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@67 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,8 +32,8 @@ findutils (4.2.3.CVS20041106-1) experimental; urgency=low
   * Add shfs to PRUNFS (Closes: #260780)
   * New patch: 10_updatedb-findopts: Add --findoptions option to updatedb to
     pass global options to find.
-  * Set FINDOPTIONS='-ignore_readdir_race' for updatedb.sh's cron-job and stop
-    redirecting stderr to /dev/null.  (Closes: #245874, #169730)
+  * Set FINDOPTIONS='-ignore_readdir_race' for updatedb.sh's cron-job.
+    (Closes: #169730)
   * standards-version 3.6.1 (no changes required).
 
  -- Andreas Metzler <ametzler@debian.org>  Sun,  7 Nov 2004 13:11:28 +0100
