--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
-findutils (4.2.4-UNRELEASED) experimental; urgency=low
+findutils (4.2.4-1) experimental; urgency=low
 
-  * New upstream source
+  * New upstream version
     - Closes: #175372: findutils: man pages have L's on references
     - includes 10_updatedb-findopts patch.
-    - does not print warning about listing options afeter non-options unless
+    - does not print warning about listing options after non-options unless
       connected to a tty.
-    - xargs now uses 128Kb instead of 20Kb of command line by default.
+    - xargs now uses 128Kb instead of 20Kb of command line by default, as
+      ARG_MAX is 131072 on linux this Closes: #261598.
 
  -- Andreas Metzler <ametzler@debian.org>  Tue,  9 Nov 2004 10:57:24 +0100
 
