--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.5-1) experimental; urgency=low
+
+  * New upstream version
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 20 Nov 2004 09:38:55 +0100
+
 findutils (4.2.4-1) experimental; urgency=low
 
   * New upstream version
