add minimal README.source
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@78 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ findutils (4.2.5-1) experimental; urgency=low
   * New upstream version
     - includes 25_destdir_localstatedir.dpatch, our last remaining patch, we
       are vanilla now.
+  * Add minimal debian/README.source.
 
  -- Andreas Metzler <ametzler@debian.org>  Sat, 20 Nov 2004 09:38:55 +0100
 
