--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ findutils (4.2.5-1) experimental; urgency=low
     - includes 25_destdir_localstatedir.dpatch, our last remaining patch, we
       are vanilla now.
   * Add minimal debian/README.source.
+  * Chuan-kai Lin <cklin@debian.org> has offered to serve as backup
+    maintainer. Thanks. Add him to Uploaders.
 
  -- Andreas Metzler <ametzler@debian.org>  Sat, 20 Nov 2004 09:38:55 +0100
 
