blasted UTF-8 hyphen
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@87 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 findutils (4.2.8-1) experimental; urgency=low
 
   * New upstream version
-    - New option --arg‐file=file and extended documentation about
+    - New option --arg-file=file and extended documentation about
       stdin-handling (short in manpage, more extensive in info).
       (Closes: #5956)
     - improved behavior on automounted directories.
