--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.11-1) experimental; urgency=low
+
+  * New upstream version.
+
+ -- Andreas Metzler <ametzler@debian.org>  Wed,  5 Jan 2005 12:29:36 +0100
+
 findutils (4.2.10.CVS20041219-1) experimental; urgency=low
 
   * New upstream, CVS from CVS20041219 (pre- 4.2.11).
