remove upstream-included patch
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@103 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 findutils (4.2.14-1) experimental; urgency=low
 
   * New upstream version
+    - includes patch to fix savannah #11495.
 
  -- Andreas Metzler <ametzler@debian.org>  Tue, 25 Jan 2005 11:40:21 +0100
 
