--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.22-2) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Andreas Metzler <ametzler@debian.org>  Sun, 19 Jun 2005 18:39:49 +0200
+
 findutils (4.2.22-1) unstable; urgency=low
 
   * New upstream version
