--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-findutils (4.2.22-2) unstable; urgency=low
+findutils (4.2.23-0) unstable; urgency=low
 
   * New upstream version.
+  * Remove locatedb on purge. (Closes: #315343)
 
- -- Andreas Metzler <ametzler@debian.org>  Sun, 19 Jun 2005 18:39:49 +0200
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 25 Jun 2005 11:50:10 +0200
 
 findutils (4.2.22-1) unstable; urgency=low
 
