--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.22-UNRELEASED) unstable; urgency=low
+
+  * standards-version 3.6.2, no changes required.
+
+ -- Andreas Metzler <ametzler@debian.org>  Fri,  8 Jul 2005 11:44:11 +0200
+
 findutils (4.2.22-2) unstable; urgency=high
 
   * Remove locatedb on purge. (Closes: #315343)
