debian/changelog verified for release; remove cruft debian/upstream.BTS
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@171 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-findutils (4.2.24-UNRELEASED) unstable; urgency=low
+findutils (4.2.24-1) unstable; urgency=low
 
   * standards-version 3.6.2, no changes required.
   * New upstream version 4.2.24:
