--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.25-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@downhill.aus.cc>  Sun,  4 Sep 2005 10:23:45 +0200
+
 findutils (4.2.25-1) unstable; urgency=low
 
   * new upstream version 4.2.25. (bugfix and improved testsuite)
