--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ findutils (4.2.25-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
   * mimick override-file and put find in section utils instead of base.
+  * debian/README.debian: on_ac_power works for ACPI, too. (Closes: #306963)
 
  -- Andreas Metzler <ametzler@downhill.aus.cc>  Sun,  4 Sep 2005 10:23:45 +0200
 
