--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ findutils (4.2.25-2) UNRELEASED; urgency=low
   * NOT RELEASED YET
   * mimick override-file and put find in section utils instead of base.
   * debian/README.debian: on_ac_power works for ACPI, too. (Closes: #306963)
+  * [locate] add "none" to PRUNEFS to stop updatdb from indexing bind-mounted
+    directory trees. (Closes: #329385)
 
  -- Andreas Metzler <ametzler@downhill.aus.cc>  Sun,  4 Sep 2005 10:23:45 +0200
 
