Add a NEWS.Debian file, concerning "find -perm +MODE" and "find -perm /MODE"
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@180 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,10 @@ findutils (4.2.25-2) UNRELEASED; urgency=low
   * debian/README.debian: on_ac_power works for ACPI, too. (Closes: #306963)
   * [locate] add "none" to PRUNEFS to stop updatdb from indexing bind-mounted
     directory trees. (Closes: #329385)
+  * Add a NEWS.Debian file, explaining the withdrawal of "find -perm +MODE"
+    and introduction of "find -perm /MODE". (Closes: #329358)
 
- -- Andreas Metzler <ametzler@downhill.aus.cc>  Sun,  4 Sep 2005 10:23:45 +0200
+ -- Andreas Metzler <ametzler@debian.org>  Sat,  8 Oct 2005 12:06:17 +0200
 
 findutils (4.2.25-1) unstable; urgency=low
 
