--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,22 @@
-findutils (4.2.25-2) UNRELEASED; urgency=low
+findutils (4.2.26-1) unstable; urgency=low
 
-  * NOT RELEASED YET
   * mimick override-file and put find in section utils instead of base.
   * debian/README.debian: on_ac_power works for ACPI, too. (Closes: #306963)
-  * [locate] add "none" to PRUNEFS to stop updatdb from indexing bind-mounted
-    directory trees. (Closes: #329385)
   * Add a NEWS.Debian file, explaining the withdrawal of "find -perm +MODE"
     and introduction of "find -perm /MODE". (#329358)
+  * New upstream version 4.2.26.
+    - find manpage updated to document -perm /... instead of -perm +...
+      (Closes: #330245)
+    - Typos in xargs.1 and find.1 fixed. (Thanks, A. Costa)
+      (Closes: #327909, #327910)
+    - If the input to xargs is a large number of very short options (for
+      example, one character each), earlier versions of xargs would fail
+      with 'Argument list too long'. This is because Linux's execve
+      implementation requires that the sum of the sizes of all argument
+      string pointers not exceed 128K (the actual limit is 
+      ARG_MAX - sizeof (void*)). Hopefully (Closes: #313028).
 
- -- Andreas Metzler <ametzler@debian.org>  Sat,  8 Oct 2005 12:06:17 +0200
+ -- Andreas Metzler <ametzler@debian.org>  Sun, 20 Nov 2005 09:38:42 +0100
 
 findutils (4.2.25-1) unstable; urgency=low
 
