fix ftbfs on hppa, alpha, amd64 and ia64
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@185 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+findutils (4.2.26-2) unstable; urgency=low
+
+  * [xargs] Use true instead of echo in testsuite, hopefully fixing FTBFS on
+    alpha, amd64 and ia64. (Closes: #340664)
+  * [xargs] Limit number of arguments to (arg_max / sizeof(void*)) - 2 instead
+    of ...-1, hopefully fing FTBFS on hppa.
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat,  3 Dec 2005 12:41:04 +0100
+
 findutils (4.2.26-1) unstable; urgency=low
 
   * mimick override-file and put find in section utils instead of base.
