--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.26-3) unstable; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sun,  4 Dec 2005 10:44:04 +0100
+
 findutils (4.2.26-2) unstable; urgency=low
 
   * [xargs] Use true instead of echo in testsuite, hopefully fixing FTBFS on
