--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
-findutils (4.2.27-13) unstable; urgency=low
+findutils (4.2.27-1) unstable; urgency=low
 
   * New upstream version
+    - filesystem detection should be correct more often. Hopefully closes
+      #344356
   * Add udf to PRUNEFS (Closes: #340597)
 
- -- Andreas Metzler <ametzler@debian.org>  Sun,  4 Dec 2005 10:44:04 +0100
+ -- Andreas Metzler <ametzler@debian.org>  Fri,  6 Jan 2006 17:45:04 +0100
 
 findutils (4.2.26-2) unstable; urgency=low
 
