--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.27-4) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@downhill.aus.cc>  Sat, 13 May 2006 14:28:23 +0200
+
 findutils (4.2.27-3) unstable; urgency=low
 
   * [updatedb] use su "$LOCALUSER" -s $SHELL -c false instead of
