--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-findutils (4.2.27-4) UNRELEASED; urgency=low
+findutils (4.2.28-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream version.
+   - includes 01_updatedb-withnew-su.dpatch, drop it.
 
- -- Andreas Metzler <ametzler@downhill.aus.cc>  Sat, 13 May 2006 14:28:23 +0200
+ -- Andreas Metzler <ametzler@debian.org>  Sun,  6 Aug 2006 09:53:05 +0200
 
 findutils (4.2.27-3) unstable; urgency=low
 
