--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.28-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sun,  6 Aug 2006 10:39:51 +0200
+
 findutils (4.2.28-1) unstable; urgency=low
 
   * New upstream version.
