--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-findutils (4.2.28-3) UNRELEASED; urgency=low
+findutils (4.2.30-1) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * New upstream version.
+    - drop patches/11_fix_execdir.dpatch added in 4.2.28-2.
+    - drop debian/patches/10_tcl8.3_testsuite_failure.dpatch
 
- -- Andreas Metzler <ametzler@debian.org>  Sun, 25 Feb 2007 10:58:14 +0100
+ -- Andreas Metzler <ametzler@debian.org>  Sun,  8 Apr 2007 13:38:24 +0200
 
 findutils (4.2.28-2) unstable; urgency=low
 
