--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ findutils (4.2.30-1) UNRELEASED; urgency=low
   * New upstream version.
     - drop patches/11_fix_execdir.dpatch added in 4.2.28-2.
     - drop debian/patches/10_tcl8.3_testsuite_failure.dpatch
+  * Work around http://savannah.gnu.org/bugs/?19550 by forcing
+    --without-included-regex.
 
  -- Andreas Metzler <ametzler@debian.org>  Sun,  8 Apr 2007 13:38:24 +0200
 
