--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-findutils (4.2.30-1) UNRELEASED; urgency=low
+findutils (4.2.30-1) unstable; urgency=low
 
-  * NOT RELEASED YET
   * New upstream version.
     - drop patches/11_fix_execdir.dpatch added in 4.2.28-2.
     - drop debian/patches/10_tcl8.3_testsuite_failure.dpatch
