--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.30-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sun, 15 Apr 2007 18:20:18 +0200
+
 findutils (4.2.30-1) unstable; urgency=low
 
   * New upstream version.
