--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 findutils (4.2.30-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * Undo workaround for savannah #19550, since it is a glibc bug.
 
  -- Andreas Metzler <ametzler@debian.org>  Sun, 15 Apr 2007 18:20:18 +0200
 
