--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.31-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat,  2 Jun 2007 10:53:46 +0200
+
 findutils (4.2.31-1) unstable; urgency=medium
 
   * Undo workaround for savannah #19550, since it is a glibc bug.
