--- a/debian/changelog
+++ b/debian/changelog
@@ -7,14 +7,14 @@ findutils (4.2.31-2) UNRELEASED; urgency=low
       (resulting description change Closes: #448523)
     + Drop misnamed /etc/updatedb.conf and include its contents in cron.daily
       file.  (updatedb.conf only configured the cronjob, but not any
-      invocation of updatedb. (Closes: #342713). Allow keeping customization in a
-      separate /etc/updatedb.findutils.cron.local (Closes: #344213)
+      invocation of updatedb. (Closes: #342713). Allow keeping customization
+      in a separate /etc/updatedb.findutils.cron.local (Closes: #344213)
     + Set cronjob IO scheduling to idle. (Thanks, Alberto Marmodoro)
       (Closes: #448398)
     + Use alternatives to manage /usr/bin/locate and /usr/bin/updatedb.
       (Closes: #57748)
-    + Remove orphaned locate related conffiles on findutils upgrade as described
-      in http://wiki.debian.org/DpkgConffileHandling
+    + Remove orphaned locate related conffiles on findutils upgrade as
+      described in http://wiki.debian.org/DpkgConffileHandling
     + In findutils.postinst remove locate database unless locate is installed.
 
  -- Andreas Metzler <ametzler@debian.org>  Sat,  2 Jun 2007 10:53:46 +0200
