--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 findutils (4.2.31-3) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * Add a note about the separate locate package to findutils' NEWS.Debian.
+    README.Debian only talks about locate. Move it to the correct package,
+    update contents. Closes: #453002
 
  -- Andreas Metzler <ametzler@debian.org>  Sat, 24 Nov 2007 10:55:17 +0100
 
