--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.31-4) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat,  1 Dec 2007 12:47:17 +0100
+
 findutils (4.2.31-3) unstable; urgency=low
 
   * Add a note about the separate locate package to findutils' NEWS.Debian.
