--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 findutils (4.2.31-4) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * Allow setting IONICE_CLASS and IONICE_PRIORITY in
+    /etc/updatedb.findutils.cron.local. (Thanks, Kees Cook).
+    Closes: #454677
 
  -- Andreas Metzler <ametzler@debian.org>  Sat,  1 Dec 2007 12:47:17 +0100
 
