--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ findutils (4.2.31-4) UNRELEASED; urgency=low
     /etc/updatedb.findutils.cron.local. (Thanks, Kees Cook).
     Closes: #454677
   * Standards-Version: 3.7.3, no changes required.
+  * Reformat /usr/share/doc/locate/README.Debian and add a comment about the
+    effects of IONICE_CLASS. (Thanks, James Youngman)
 
  -- Andreas Metzler <ametzler@debian.org>  Sat,  1 Dec 2007 12:47:17 +0100
 
