findutils Suggests: mlocate|locate|slocate.
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@289 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ findutils (4.2.31-4) UNRELEASED; urgency=low
     effects of IONICE_CLASS. (Thanks, James Youngman)
   * Do not export NICE in the cronjob, since updatedb itself does not make use
     of it.
+  * findutils Suggests: mlocate|locate|slocate. Long desription of findutils
+    was improved. (Thanks, Justin B Rye). Closes: #455690
 
  -- Andreas Metzler <ametzler@debian.org>  Sat,  1 Dec 2007 12:47:17 +0100
 
