--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,11 @@ findutils (4.2.31-4) UNRELEASED; urgency=low
     of it.
   * findutils Suggests: mlocate|locate|slocate. Long desription of findutils
     was improved. (Thanks, Justin B Rye). Closes: #455690
+  * locate-cron.daily
+    - Do not run ionice for kernels < 2.6.13. Redirect ionice stderr and
+      stdout to /dev/null. (Thanks, Craig Sanders)
+    - Allow disabling ionice by setting  UPDATDB_NO_IONICE to a non-empty
+      value in /etc/updatedb.findutils.cron.local Closes: #456291
 
  -- Andreas Metzler <ametzler@debian.org>  Sat,  1 Dec 2007 12:47:17 +0100
 
