--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ findutils (4.2.31-4) UNRELEASED; urgency=low
       stdout to /dev/null. (Thanks, Craig Sanders)
     - Allow disabling ionice by setting  UPDATDB_NO_IONICE to a non-empty
       value in /etc/updatedb.findutils.cron.local Closes: #456291
+  * Fixed minor grammar error in 4.2.31-2 entry of NEWS.Debian. (Thanks,
+    Steve Langasek) Closes: #457231
 
  -- Andreas Metzler <ametzler@debian.org>  Sat,  1 Dec 2007 12:47:17 +0100
 
